2002-08-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (ReadFileScatter, WriteFileGather):
	Change second parameter to pointer.

2002-07-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wininet.h (InternetReadFileEx[AW]). Add prototypes and
	UNICODE mappings.
	* lib/wininet.def: Regenerate.

2002-07-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/windef.h (PVOID): Move typedef to...
	* include/winnt: ...here.
	(PVOID64): New typeddef.

	* include/winnt,h (FILE_SEGMENT_ELEMENT): Define union.
	* include/winbase.h (ReadFileScatter, WriteFileGather):
	Add prototypes.

	* include/winnt,h (PROCESSOR_ARCHITECTURE_*): Add defines.
	(PROCESSOR_INTEL_IA64): Add define.

2002-07-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oleidl.h (MK_ALT): Define.

2002-07-26  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/exdisp.h: New file.
	* include/exdispid.h: New file.
	* include/mshtml.h: New file.
	* lib/test.c: #include exdisp.h and mshtml.h
	* lib/uuid.c (CLSID_WebBrowser, DIID_DWebBrowserEvents,
	DIID_DWebBrowserEvents2, IID_IHTMLDocument, IID_IHTMLDocument2,
	IID_IHTMLElement, IID_IHTMLSelectionObject, IID_IHTMLTxtRange,
	IID_IWebBrowser, IID_IWebBrowser2, IID_IWebBrowserApp):
	New GUIDs.

2002-07-26  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/docobj.h: New file.
	* include/idispids.h: New file.
	* include/objidl.h (IID_IMoniker): Declare.
	* include/ocidl.h (READYSTATE): New enum.
	(IOleInPlaceSiteEx): New interface.
	* include/olectlid.h (IID_IEnumSTATSTG): New interface
	identifier.
	* include/oleidl.h (IOleItemContainer, IOleInPlaceObject,
	IOleInPlaceSite): New interfaces.
	* lib/test.c: #include docobj.h,idispids.h,

2002-07-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (BFFM_VALIDATEFAILED[AW]): Add defines.
	(BFFM_SETSTATUSTEXT, BFFM_SETSELECTION): UNICODE them.

2002-07-25  Mattia Barbon  <mbarbon@dsi.unive.it>
