@@ -1,3 +1,10 @@
+2002-08-03  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* winbase.h (AddAccessAllowedAceEx,AddAccessDeniedAceEx,
+	GetFileSizeEx, SetFilePointerEx): Add prototypes.
+	(EncryptFile[AW], FileEncryptionStatus[AW]): Add prototypes
+	and UNICODE mappings.
+
 2002-08-02  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/winbase.h (ReadFileScatter, WriteFileGather):
